# smart-config

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  crates.js  deny.toml  help.html  index.html  process-docs.sh  search-index.js  settings.html  src-files.js
.github/release-please/: config.json  manifest.json
.github/workflows/: cargo-deny.yml  ci.yml  release-please.yml  secrets_scanner.yaml
crates/smart-config/: Cargo.toml  README.md
crates/smart-config-commands/: Cargo.toml  README.md
crates/smart-config-commands/examples/: cli.rs  make-snapshots.sh
crates/smart-config-commands/examples/cli/: main.rs
crates/smart-config-commands/src/: debug.rs  help.rs  lib.rs  markdown.rs  schema_ref.rs  utils.rs
crates/smart-config-commands/tests/integration/: configs.rs  main.rs
crates/smart-config-commands/tests/integration/snapshots/: integration__debug_errors.snap  integration__debug_full.snap  integration__example_diff_env.snap  integration__example_diff_json.snap  integration__example_diff_yaml.snap  integration__example_full_env.snap  integration__example_full_json.snap  integration__example_full_yaml.snap  integration__help_embedded_enum.snap  integration__help_filtered.snap  integration__help_full.snap  integration__markdown_embedded_enum.snap  integration__markdown_filtered.snap  integration__markdown_full.snap
crates/smart-config-derive/: Cargo.toml  README.md
crates/smart-config-derive/src/: config.rs  de.rs  describe.rs  example.rs  lib.rs  utils.rs
crates/smart-config/src/: alt.rs  de.rs  de_new.rs  error.rs  fallback.rs  lib.rs  metadata.rs  parsing.rs  pat.rs  schema.rs  source.rs  testing.rs  testonly.rs  types.rs  utils.rs  validation.rs  value.rs  visit.rs
crates/smart-config/src/_docs/: derive_examples.rs  derive_ref.rs  mod.rs  sources.rs
crates/smart-config/src/de/: _private.rs  alloy_impl.rs  deserializer.rs  macros.rs  mod.rs  param.rs  param_impl.rs  primitive_types_impl.rs  repeated.rs  secret.rs  secrets.rs  tests.rs  transform.rs  units.rs
crates/smart-config/src/metadata/: _private.rs  mod.rs  tests.rs  validation.rs
crates/smart-config/src/schema/: mod.rs  mount.rs  tests.rs
crates/smart-config/src/source/: env.rs  json.rs  macros.rs  mod.rs  tests.rs  yaml.rs
crates/smart-config/src/utils/: decimal.rs  mod.rs
crates/smart-config/src/validation/: _private.rs  mod.rs
crates/smart-config/tests/: integration.rs
crates/smart-config/tests/code_samples/: main.rs  test.env  test.yml  test_config.rs
crates/smart-config/tests/ui/config/: embedded_paths.rs  embedded_paths.stderr  invalid_path.rs  invalid_path.stderr  invalid_path_delimiter.rs  invalid_path_delimiter.stderr  invalid_path_start.rs  invalid_path_start.stderr
crates/smart-config/tests/ui/derives/: bogus_alias_name.rs  bogus_alias_name.stderr  bogus_alias_name_for_config.rs  bogus_alias_name_for_config.stderr  bogus_alias_path.rs  bogus_alias_path.stderr  bogus_deprecated_path.rs  bogus_deprecated_path.stderr  bogus_nested_config.rs  bogus_nested_config.stderr  bogus_nested_name.rs  bogus_nested_name.stderr  bogus_param_name.rs  bogus_param_name.stderr  bogus_param_raw_name.rs  bogus_param_raw_name.stderr  cannot_derive_default.rs  cannot_derive_default.stderr  cannot_derive_default_enum_field.rs  cannot_derive_default_enum_field.stderr  cannot_derive_default_variant.rs  cannot_derive_default_variant.stderr  deserializer_for_nested_config.rs  deserializer_for_nested_config.stderr  flattened_config_with_alias.rs  flattened_config_with_alias.stderr  flattened_config_with_rename.rs  flattened_config_with_rename.stderr  map_with_names_collision.rs  map_with_names_collision.stderr  map_with_unsupported_keys.rs  map_with_unsupported_keys.stderr  multiple_default_variants.rs  multiple_default_variants.stderr  nest_and_flatten_config.rs  nest_and_flatten_config.stderr  no_tag_on_enum.rs  no_tag_on_enum.stderr  option_in_option.rs  option_in_option.stderr  (+28 more)
search.desc/smart_config/: smart_config-desc-0-.js
search.desc/smart_config_commands/: smart_config_commands-desc-0-.js
search.desc/smart_config_derive/: smart_config_derive-desc-0-.js
search.index/: 0061ff1e7494.js  0468a8c69adb.js  04b8ee772fa4.js  07d80d33d138.js  093836a2b721.js  0ac0677eb3af.js  0dfd71233ede.js  0e24f65477bc.js  14803befb900.js  1b2a2771e2f9.js  1e95a502fc7e.js  2b53d413550c.js  30fb810840b4.js  313c4f8fac84.js  34703183ea2b.js  356bc23d5b00.js  36bbc420d262.js  38b7f09621d0.js  3b388b03b480.js  3ec26823e061.js  416b3f1df821.js  43072f8d435f.js  44df59333f74.js  483376e08474.js  495f746621fa.js  49d3c55717ac.js  4a2741e4bad3.js  4c8884f90b6b.js  4d75d80bea86.js  4e6563ff842a.js  505f9ec84c1b.js  50632c41c348.js  5584a6f33cb4.js  55d5916ef90a.js  5986ecebc134.js  5ac684d242a3.js  5c641da97afc.js  5ed49903c2a6.js  5ff1f5914d6d.js  6755b21fb461.js  (+10 more)
search.index/crateNames/: b5145356a4c4.js
smart_config/: all.html  derive.DescribeConfig.html  derive.DeserializeConfig.html  derive.ExampleConfig.html  enum.ConfigContents.html  index.html  macro.Custom.html  macro.Serde!.html  macro.Serde.html  macro.config.html  macro.lazy_regex.html  sidebar-items.js  struct.Alias.html  struct.ByteSize.html  struct.ConfigMut.html  struct.ConfigParser.html  struct.ConfigRef.html  struct.ConfigRepository.html  struct.ConfigSchema.html  struct.ConfigSources.html  struct.DeserializeConfigError.html  struct.Environment.html  struct.EtherAmount.html  struct.Flat.html  struct.Hierarchical.html  struct.Json.html  struct.ParseError.html  struct.ParseErrors.html  struct.Prefixed.html  struct.SerializerOptions.html  struct.SourceInfo.html  struct.Yaml.html  trait.ConfigSource.html  trait.ConfigSourceKind.html  trait.DescribeConfig.html  trait.ExampleConfig.html  type.ErrorWithOrigin.html
smart_config_commands/: all.html  index.html  sidebar-items.js  struct.EnvVarOptions.html  struct.MarkdownOptions.html  struct.ParamRef.html  struct.Printer.html
smart_config_derive/: all.html  derive.DescribeConfig.html  derive.DeserializeConfig.html  derive.ExampleConfig.html  index.html  sidebar-items.js
(+221 files in other folders)
