[workspace]
members = [
    "crates/smart-config",
    "crates/smart-config-derive",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
repository = "https://github.com/matter-labs/smart-config"
license = "MIT OR Apache-2.0"
keywords = []
categories = ["development-tools"]

[workspace.dependencies]
# External dependencies
anyhow = "1"
assert_matches = "1.5.0"
compile-fmt = "0.1.0"
doc-comment = "0.3.3"
primitive-types = "0.12.2"
proc-macro2 = "1.0.7"
quote = "1"
secrecy = "0.10.3"
serde = "1"
serde_json = "1"
serde_yaml = "0.9.33"
syn = { version = "2.0", features = ["full"] }
trybuild = "1"
version-sync = "0.9.5"

# Workspace dependencies
smart-config-derive = { version = "=0.1.0", path = "crates/smart-config-derive" }

[workspace.lints.rust]
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
