[workspace]
members = [
  "crates/smart-config",
  "crates/smart-config-commands",
  "crates/smart-config-derive",
]
resolver = "3"

[workspace.package]
version = "0.4.0-pre.1"
edition = "2024"
rust-version = "1.86.0"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
repository = "https://github.com/matter-labs/smart-config"
license = "MIT OR Apache-2.0"
keywords = ["config", "configuration", "yaml"]
categories = ["development-tools"]

[workspace.dependencies]
# External dependencies
anstream = "0.6"
anstyle = "1"
anyhow = "1"
assert_matches = "1.5.0"
clap = "4.5"
compile-fmt = "0.1.0"
doc-comment = "0.3.3"
insta = "1.42.1"
primitive-types = "0.12.2"
proptest = "1.6.0"
proc-macro2 = "1.0.7"
quote = "1"
secrecy = "0.10.3"
serde = "1"
serde_json = "1"
serde_yaml = "0.9.33"
syn = { version = "2.0", features = ["full"] }
test-casing = "0.1.3"
tracing = "0.1"
trybuild = "1"
version-sync = "0.9.5"
alloy = { version = "1", default-features = false }

# Workspace dependencies
smart-config-derive = { version = "=0.4.0-pre", path = "crates/smart-config-derive" }
smart-config = { version = "=0.4.0-pre", path = "crates/smart-config" }

[workspace.lints.rust]
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
