[package]
name = "smart-config-commands"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Command-line extensions for `smart-config` library"

[package.metadata.docs.rs]
all-features = true
# Set `docsrs` to enable unstable `doc(cfg(...))` attributes.
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anstream.workspace = true
anstyle.workspace = true
cmark-writer.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
smart-config.workspace = true

[dev-dependencies]
smart-config = { workspace = true, features = ["primitive-types", "alloy"] }

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
doc-comment.workspace = true
insta.workspace = true
primitive-types.workspace = true
serde.workspace = true
test-casing.workspace = true
version-sync.workspace = true

[lints]
workspace = true
