[package]
name = "smart-config-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Derive macros for `smart-config` library"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["extra-traits"] }

[dev-dependencies]
version-sync.workspace = true

[lints]
workspace = true
