[package]
name = "smart-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
# Public dependencies (exposed in public crate APIs).
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true # TODO: optional?
smart-config-derive.workspace = true

# Private dependencies (not exposed in public crate APIs).
compile-fmt.workspace = true
secrecy.workspace = true

# As a feature: recognizes types from `primitive-types` as well-known
primitive-types = { workspace = true, features = ["serde"], optional = true }

[dev-dependencies]
assert_matches.workspace = true
doc-comment.workspace = true
trybuild.workspace = true
version-sync.workspace = true

[features]
default = []

[lints]
workspace = true
